# baskref_article

./: .gitignore  pyproject.toml  script_data_scraper.py  script_url_scraper.py
mypackage/: __init__.py  baskref_data_scraper.py  baskref_url_scraper.py  html_scraper.py
mypackage.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
